[gd_scene load_steps=4 format=3 uid="uid://oulno1atrp8k"]

[ext_resource type="Script" path="res://core/simulation/simulation.gd" id="1_thahp"]
[ext_resource type="PackedScene" uid="uid://c5dg7yq7hd7m0" path="res://core/avatar/avatar.tscn" id="2_o421v"]
[ext_resource type="PackedScene" uid="uid://b5v4w0inqo7vd" path="res://core/space/universe.tscn" id="3_q6u50"]

[node name="Simulation" type="Node"]
script = ExtResource("1_thahp")

[node name="Avatar" parent="." instance=ExtResource("2_o421v")]
transform = Transform3D(-0.82255, -0.00837469, 0.568631, 0.00348538, 0.999798, 0.0197666, -0.568682, 0.0182409, -0.822355, 0, 0, 0)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://content/starship/starship.tscn", "res://content/animated-astronaut-character-in-space-suit-loop/astronaut.tscn", "res://content/gobot/gobot.tscn", "res://core/entities/operator.tscn")

[node name="Universe" parent="." instance=ExtResource("3_q6u50")]
unique_name_in_owner = true

[connection signal="control_declined" from="." to="Avatar" method="_on_simulation_control_declined"]
[connection signal="control_granted" from="." to="Avatar" method="_on_simulation_control_granted"]
[connection signal="control_released" from="." to="Avatar" method="_on_simulation_control_released"]
[connection signal="entities_updated" from="." to="Avatar" method="update_entities"]
[connection signal="release_control" from="Avatar" to="." method="_on_avatar_release_control"]
[connection signal="requesting_control" from="Avatar" to="." method="_on_avatar_requesting_control"]
[connection signal="spawn_entity" from="Avatar" to="." method="_on_select_entity_to_spawn"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
